# nmc-dev

./: .gitignore  README.md
common/: dataInit.cpp  hadamard.cpp  hadamard_16s.cpp  hadamard_init.cpp  mulmm.cpp  triangulation.cpp
dev-nastja/had/: get_image_array.py  image128.txt  image64.cpp  image64.txt  interpolated_image.txt  show_interpolated_image.py  wht_interpolation.cpp
dev-nastja/had_filter/: CMakeLists.txt  build.cmd  smooth_filter.cpp
doxy/: Doxyfile
doxy/html/: _formulas.tex  annotated.html  classes.html  files.html  (+134 more)
include/: dumpx.h  general_header.h  hadamard.h  mTranspose.h  maxtimer.h  nmassert.h  nmassert.hs  nmc.hs  nmtype.h  primitive.h  printx.hs  triangulation.h  vReodering.h
nm/: NEW_vec_ClipMul4D4W4_AddVr.S  abs2.S  abs_16s.S  abs_16s_C.cpp  cnvDividedMaskToIndices.S  hash.S  hash64.S  hash_C.cpp  minMax.S  minMax.cpp  minmax_qtbb.S  mulmm_2col.S  nmppsAbsDiff_32f.S  nmppsAbs_32f.S  nmppsAdd_MulC_32f.S  nmppsAverage.S  nmppsDecimate_16s.S  nmppsMerge.S  nmppsMerge4_nm16s.S  nmppsSub_Abs_Even_32f.S  sumOfSquares.S  transp_32s.S  transpose.S  transpose.cpp  transpose_16s.S  transpose_32s.S  transpose_3X3.S  transpose_64X64.S  vecMinMax.S  vec_ClipMul4D4W4_AddVr.S  vec_ClipMul4D4W4_AddVr.asm  vec_clipmulNDNW4_addvr.S
pc/: abs2.cpp  abs_16s_C.cpp  dumpx.cpp  hash64.cpp  hash_C.cpp  minmax.cpp  minmax_qtbb.cpp  mulmm_2col.cpp  nmppsAbsDiff_32f.cpp  nmppsAbs_32f.cpp  nmppsAdd_MulC_32f.cpp  nmppsAverage.cpp  nmppsMerge.c  nmppsSub_Abs_Even_32f.cpp  nmppsSub_Abs_Odd_32f.cpp  sumOfSquares.cpp  transpose.cpp  transpose_16s.cpp  vecMinMax_C.cpp
(+184 files in other folders)
